# simplehtml

./: .gitignore  .pylintrc  README.md  poetry.lock.license  pyproject.toml
.github/workflows/: lint.yml  pytest.yml  reuse.yml
src/standalonehtml/: __init__.py
src/standalonehtml/elements/: element.py  metadata.py
tests/: test_elements.py
