# SPDX-FileCopyrightText: 2023 Matthew Nickson <mnickson@sidingsmedia.com>
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "standalonehtml"
version = "0.1.0"
description = "Generate simple, standalone HTML documents"
authors = ["Matthew Nickson <mnickson@sidingsmedia.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pylint = "^2.15.10"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
